--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
-  "name": "alaska-airlines-app-menu",
-  "description": "Alaska Airlines App Menu",
+  "name": "alaska-nav",
   "version": "1.0.0",
-  "author": "david lindahl",
-  "dependencies": {
-    "gatsby": "^1.9.277",
-    "gatsby-link": "^1.6.46",
-    "gatsby-plugin-react-helmet": "^2.0.11",
-    "react-helmet": "^5.2.0"
-  },
-  "keywords": [
-    "gatsby"
-  ],
-  "license": "MIT",
+  "description": "alaska nav bar",
+  "main": "server.js",
   "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "format": "prettier --write 'src/**/*.js'",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "devDependencies": {
-    "prettier": "^1.13.7"
+    "start": "node index.js",
+    "nodemon": "nodemon"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
-  }
+    "url": "git+https://github.com/austriker27/alaska-nav.git"
+  },
+  "keywords": [
+    "nav",
+    "navbar"
+  ],
+  "author": "austriker27",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/austriker27/alaska-nav/issues"
+  },
+  "homepage": "https://github.com/austriker27/alaska-nav#readme",
+  "dependencies": {
+    "browser-sync": "^2.24.6",
+    "eslint": "^4.17.0"
+  },
+  "devDependencies": {}
 }
